--- a/src/base/basics.scss
+++ b/src/base/basics.scss
@@ -14,7 +14,7 @@ body {
     position: relative;
 
     @media screen and (max-width: $tablet) {
-        width: 95%;
+        width: 90%;
     }
 }
 
