--- a/src/base/variables.scss
+++ b/src/base/variables.scss
@@ -45,5 +45,5 @@ $desktop: 1192px !default;
 $large-desktop: 1384px !default;
 
 $heading-line-height: 1.25 !default;
-$family-sans-serif: "Open Sans", Helvetica, Arial, sans-serif !default;
+$family-sans-serif: "Raleway", Helvetica, Arial, sans-serif !default;
 $border-radius: 5px;
