--- a/src/buttons/buttons.scss
+++ b/src/buttons/buttons.scss
@@ -5,7 +5,7 @@ $button-hover-background-color: $grey-very-light !default;
 $button-border-width: 2px !default;
 $button-border-color: $grey-light !default;
 
-$button-padding:0.75em 1em !default;
+$button-padding: 0.6em 1.1em !default;
 $button-border-radius: 5px !default;
 
 .k-button {
